--- a/BasicDrawing/en.lproj/MainStoryboard.storyboard
+++ b/BasicDrawing/en.lproj/MainStoryboard.storyboard
@@ -13,19 +13,57 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7VC-dY-fBx">
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5AZ-GQ-MK8">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="WTY-Zn-VMl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Erase">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="selected">
+                                    <color key="titleColor" red="1" green="0.40000000596046448" blue="0.40000000596046448" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="actionErase:" destination="2" eventType="touchUpInside" id="2ag-nh-7HI"/>
+                                </connections>
+                            </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="sm4-3p-fZo">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="140" id="Nqj-0Y-fq4"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="S"/>
+                                    <segment title="M"/>
+                                    <segment title="L"/>
+                                </segments>
+                                <connections>
+                                    <action selector="actionSetPointSize:" destination="2" eventType="valueChanged" id="KzD-CK-1ld"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="5AZ-GQ-MK8" firstAttribute="top" secondItem="5" secondAttribute="top" constant="20" symbolic="YES" type="default" id="C4s-jo-jvx"/>
+                            <constraint firstItem="sm4-3p-fZo" firstAttribute="top" secondItem="5" secondAttribute="top" constant="20" symbolic="YES" type="default" id="FIe-D6-dfh"/>
+                            <constraint firstItem="5AZ-GQ-MK8" firstAttribute="leading" secondItem="5" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="IIU-vo-Qfx"/>
                             <constraint firstItem="7VC-dY-fBx" firstAttribute="bottom" secondItem="5" secondAttribute="bottom" type="default" id="QZX-78-OVJ"/>
+                            <constraint firstAttribute="trailing" secondItem="sm4-3p-fZo" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Tq2-bD-qJz"/>
                             <constraint firstItem="7VC-dY-fBx" firstAttribute="leading" secondItem="5" secondAttribute="leading" type="default" id="X0H-fW-fFq"/>
                             <constraint firstItem="7VC-dY-fBx" firstAttribute="top" secondItem="5" secondAttribute="top" type="default" id="lbF-X2-F2h"/>
                             <constraint firstItem="7VC-dY-fBx" firstAttribute="trailing" secondItem="5" secondAttribute="trailing" type="default" id="w7Y-9W-nf0"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="buttonErase" destination="5AZ-GQ-MK8" id="h1y-td-24c"/>
                         <outlet property="drawImage" destination="7VC-dY-fBx" id="5I8-DA-R2i"/>
+                        <outlet property="segmentPointSize" destination="sm4-3p-fZo" id="IVB-Mb-KKj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
@@ -36,7 +74,11 @@
         <class className="BDViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BDViewController.h"/>
             <relationships>
+                <relationship kind="action" name="actionErase:"/>
+                <relationship kind="action" name="actionSetPointSize:"/>
+                <relationship kind="outlet" name="buttonErase" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="drawImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="segmentPointSize" candidateClass="UISegmentedControl"/>
             </relationships>
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
